fixed code snippet issues, refactors, and tweaks to blog post headers

--- a/blog/src/data/blog/2-codewave-poc.mdx
+++ b/blog/src/data/blog/2-codewave-poc.mdx
@@ -1,10 +1,14 @@
 ---
 title: "Codewaves Proof of concept"
 slug: "codewaves-poc"
+intro: "A codewaves proof of concept mdx document"
+tools: "mdx react code-surfer"
 date: "12-11-2019"
 publish: true
 ---
 import { CodeWave } from "gatsby-theme-waves"
+
+### First Title
 
 Lorem ipsum dolor sit amet, fugit errem volumus ex sit, magna fugit deserunt et qui. Sapientem mnesarchum ei vis, offendit appetere inimicus eu has. Te utamur voluptua per. Per dicant intellegebat in. Laboramus referrentur id his, electram philosophia sit an. Possim efficiendi no sea, eu admodum copiosae indoctum mea.
 
@@ -36,13 +40,9 @@ function HelloWorld({
 Lorem markdownum; horror testudine colorque si neque memor! Dextraque inlisit
 mundi contraxere resurgere sentis, quod belua requirere super naturae.
 
-<div>
-
 ```python
 # Hi
 ```
-
-  </div>
 
 Ad molle respicit, **venerat cum mansit** ferventi tempora. Tela insignia.
 Threicius altera fundamina ex **preces**: quaerenti ferarum adspicit mihi
