seo - fixed urls

--- a/blog/src/data/blog/2-codewave-poc.mdx
+++ b/blog/src/data/blog/2-codewave-poc.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Codewaves Proof of concept"
-slug: "codewaves-poc"
+slug: "codewaves-poc/index.html"
 intro: "A codewaves proof of concept mdx document"
 tools: "mdx react code-surfer"
 date: "12-11-2019"
