--- a/blog/src/data/blog/3-mdx-poc.mdx
+++ b/blog/src/data/blog/3-mdx-poc.mdx
@@ -2,7 +2,7 @@
 title: "mdx proof of concept"
 intro: "This is a proof of concept of a complex mdx doc"
 tools: "mdx react codewave prism-react-renderer"
-slug: "mdx-poc"
+slug: "mdx-poc/index.html"
 date: "12-11-2019"
 publish: true
 ---
