blog - created md docs flag for blog specific posts

--- a/blog/src/data/blog/3-mdx-poc.mdx
+++ b/blog/src/data/blog/3-mdx-poc.mdx
@@ -5,6 +5,7 @@ tools: "mdx react codewave prism-react-renderer"
 slug: "mdx-poc/index.html"
 date: "12-11-2019"
 publish: true
+blog: true
 ---
 import Code from "components/code"
 
