--- a/blog/src/data/blog/2-codewave-poc.mdx
+++ b/blog/src/data/blog/2-codewave-poc.mdx
@@ -5,6 +5,7 @@ intro: "A codewaves proof of concept mdx document"
 tools: "mdx react code-surfer"
 date: "12-11-2019"
 publish: true
+blog: true
 ---
 import { CodeWave } from "gatsby-theme-waves"
 
