pages - finished 'About' and 'Business' pages

--- a/blog/src/data/blog/2-codewave-poc.mdx
+++ b/blog/src/data/blog/2-codewave-poc.mdx
@@ -4,7 +4,7 @@ slug: "codewaves-poc/index.html"
 intro: "A codewaves proof of concept mdx document"
 tools: "mdx react code-surfer"
 date: "12-11-2019"
-publish: true
+publish: false
 blog: true
 ---
 import { CodeWave } from "gatsby-theme-waves"
