--- a/blog/src/data/blog/3-mdx-poc.mdx
+++ b/blog/src/data/blog/3-mdx-poc.mdx
@@ -4,7 +4,7 @@ intro: "This is a proof of concept of a complex mdx doc"
 tools: "mdx react codewave prism-react-renderer"
 slug: "mdx-poc/index.html"
 date: "12-11-2019"
-publish: true
+publish: false
 blog: true
 ---
 import Code from "components/code"
